# gpp-bevy-example

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-wasm.yml
assets/: index.html
scripts/: build-wasm.bat  build-wasm.sh
